--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -16,11 +16,20 @@
 # https://drupal.org/SA-CORE-2013-003   CVE-2013-6389   7.24/6.29   http://osvdb.org/100035
 # https://drupal.org/SA-CORE-2014-001   CVE-2014-1475   7.26/6.30   http://osvdb.org/102124
 # https://drupal.org/SA-CORE-2014-001   CVE-2014-1476   7.26/6.30   http://osvdb.org/102125
-Drupal:
+# https://drupal.org/SA-CORE-2014-002   Requested       7.27/6.31
+Drupal 7:
   1:
     location: ['/includes/bootstrap.inc']
-    secure_version: '7.26'
+    secure_version: '7.27'
     regexp: ['define.*?VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://drupal.org/SA-CORE-2014-001 CVE-2014-1475 http://osvdb.org/102124 CVE-2014-1476 http://osvdb.org/102125'
+    cve: 'https://drupal.org/SA-CORE-2014-002'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+Drupal 6:
+  1:
+    location: ['/CHANGELOG.txt']
+    secure_version: '6.31'
+    regexp: ['^Drupal (?P<version>[0-9.]+)']
+    cve: 'https://drupal.org/SA-CORE-2014-002'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
