--- a/yamls/roundcube.yml
+++ b/yamls/roundcube.yml
@@ -18,19 +18,13 @@
 # CVE-2013-1904 0.8.6
 # CVE-2013-5646 0.9.3 http://osvdb.org/96722
 # CVE-2013-6172 0.9.5/0.8.7 http://roundcube.net/news/2013/10/21/security-updates-095-and-087/ http://trac.roundcube.net/ticket/1489382 http://osvdb.org/98895
+# CVE-2014-XXXX N/A http://osvdb.org/105639
+# CVE-2014-XXXX 1.0.0. http://osvdb.org/105486 http://roundcube.net/news/2014/04/07/roundcube-webmail-1.0.0-released/
 Roundcube 0.9:
   1:
     location: ['/program/include/iniset.php']
-    secure_version: '0.9.5'
-    regexp: ['define.*?RCMAIL_VERSION.*?(?P<version>0\.9[0-9.]+)']
-    cve: 'http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2013-6172 http://roundcube.net/news/2013/10/21/security-updates-095-and-087/ http://osvdb.org/98895'
-    fingerprint: detect_general
-    post_processing: ['php5.fcgi']
-Roundcube 0.8:
-  1:
-    location: ['/program/include/iniset.php']
-    secure_version: '0.8.7'
-    regexp: ['define.*?RCMAIL_VERSION.*?(?P<version>0\.8[0-9.]+)']
-    cve: 'http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2013-6172 http://roundcube.net/news/2013/10/21/security-updates-095-and-087/ http://osvdb.org/98895'
+    secure_version: '1.0.0'
+    regexp: ['define.*?RCMAIL_VERSION.*?(?P<version>[0-9.]+)']
+    cve: 'http://osvdb.org/105486 http://roundcube.net/news/2014/04/07/roundcube-webmail-1.0.0-released/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
