--- a/yamls/gallery.yml
+++ b/yamls/gallery.yml
@@ -10,7 +10,7 @@
 # CVE-2013-XXXX 3.0.5 http://osvdb.org/90599 http://osvdb.org/91412 http://osvdb.org/90590 http://osvdb.org/90599 http://osvdb.org/90600 http://osvdb.org/90601 http://osvdb.org/91410 http://osvdb.org/91411
 # CVE-2013-2087 3.0.7 http://osvdb.org/92691
 # CVE-2013-2087 3.0.7 http://osvdb.org/92740
-# CVE-2013-2138 3.0.8 http://galleryproject.org/gallery_3_0_8
+# CVE-2013-2138 3.0.8 http://osvdb.org/93911 http://osvdb.org/93912 http://galleryproject.org/gallery_3_0_8
 # CVE-2013-2240 3.0.9 http://osvdb.org/94663 SA53964 http://galleryproject.org/gallery_3_0_9
 # CVE-2013-2241 3.0.9 http://osvdb.org/94664 http://galleryproject.org/gallery_3_0_9
 Gallery 3:
