--- a/yamls/e107.yml
+++ b/yamls/e107.yml
@@ -51,6 +51,9 @@
 # CVE-2011-4921 1.0.0   http://osvdb.org/78050
 # CVE-2012-6433 1.0.2   http://osvdb.org/88862
 # CVE-2012-6434 1.0.3   http://osvdb.org/88908
+# CVE-2013-7305 TODO
+# CVE-2013-2750 TODO
+# CVE-2014-1846 TODO
 e107:
   1:
     location: ['/e107_admin/ver.php']
