Added fingerprint data.

--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -5,6 +5,8 @@
 # CVE-2013-4307 extension. not going to add yet. maybe in future
 # CVE-2013-4308 extension. not going to add yet. maybe in future
 # CVE-2014-2854 extension. not going to add yet. maybe in future
+# CVE-2014-3454 extension. not going to add yet. maybe in future
+# CVE-2014-3455 extension. not going to add yet. maybe in future
 # CVE-2009-4570
 # CVE-2009-4589
 # CVE-2010-1150 1.15.3      http://osvdb.org/63570 SA39333
