--- a/yamls/phpmyadmin.yml
+++ b/yamls/phpmyadmin.yml
@@ -74,6 +74,10 @@
 # PMASA-2014-1  CVE-2014-1879   4.1.7   http://www.phpmyadmin.net/home_page/security/PMASA-2014-1.php
 # PMASA-2014-2  CVE-2014-4348   4.2.4   http://phpmyadmin.net/home_page/security/PMASA-2014-2.php
 # PMASA-2014-3  CVE-2014-4349   4.2.4/4.1.14.1 http://www.phpmyadmin.net/home_page/security/PMASA-2014-3.php
+# PMASA-2014-4
+# PMASA-2014-5  CVE-2014-4955
+# PMASA-2014-6  CVE-2014-4986
+# PMASA-2014-7  CVE-2014-4987
 phpMyAdmin:
   1:
     location: ['/libraries/Config.class.php']
