--- a/yamls/piwigo.yml
+++ b/yamls/piwigo.yml
@@ -9,6 +9,7 @@
 # CVE-2013-XXXX ? http://osvdb.org/101409
 # CVE-2014-4613/CVE-2014-4614 2.6.2 http://osvdb.org/103774 http://piwigo.org/releases/2.6.2
 # CVE-2014-4648 2.6.3 http://piwigo.org/releases/2.6.3 http://osvdb.org/108063
+# CVE-2014-4649 2.7.0beta2 http://piwigo.org/bugs/view.php?id=3089
 Piwigo:
   1:
     location: ['/include/constants.php']
