--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -121,27 +121,11 @@
 # CVE-????-???? 3.1.4   http://osvdb.org/73721 http://wordpress.org/news/2011/06/wordpress-3-1-4/
 # CVE-2014-0165 3.8.2/3.7.2 http://codex.wordpress.org/Version_3.8.2 http://codex.wordpress.org/Version_3.7.2 http://osvdb.org/show/osvdb/105630
 # CVE-2014-0166 3.8.2/3.7.2 http://codex.wordpress.org/Version_3.8.2 http://codex.wordpress.org/Version_3.7.2 http://osvdb.org/show/osvdb/105620
-WordPress 3.8:
-  1:
-    location: ['/wp-includes/version.php']
-    secure_version: '3.8.2'
-    regexp: ['\$wp_version.*?(?P<version>3\.8\.[0-9.]+)']
-    cve: 'CVE-2014-0165 CVE-2014-0166 http://codex.wordpress.org/Version_3.8.2 http://codex.wordpress.org/Version_3.7.2 http://osvdb.org/show/osvdb/105630 http://osvdb.org/show/osvdb/105620'
-    fingerprint: detect_general
-    post_processing: ['php5.fcgi']
-WordPress 3.7:
-  1:
-    location: ['/wp-includes/version.php']
-    secure_version: '3.7.2'
-    regexp: ['\$wp_version.*?(?P<version>3\.[0-7]\.[0-9.]+)']
-    cve: 'CVE-2014-0165 CVE-2014-0166 http://codex.wordpress.org/Version_3.8.2 http://codex.wordpress.org/Version_3.7.2 http://osvdb.org/show/osvdb/105630 http://osvdb.org/show/osvdb/105620'
-    fingerprint: detect_general
-    post_processing: ['php5.fcgi']
 WordPress:
   1:
     location: ['/wp-includes/version.php']
-    secure_version: '3.7.2'
-    regexp: ['\$wp_version.*?(?P<version>[0-2]\.[0-9]\.[0-9])']
-    cve: 'CVE-2014-0165 CVE-2014-0166 http://codex.wordpress.org/Version_3.8.2 http://codex.wordpress.org/Version_3.7.2 http://osvdb.org/show/osvdb/105630 http://osvdb.org/show/osvdb/105620'
+    secure_version: '3.9.2'
+    regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
+    cve: 'http://wordpress.org/news/2014/08/wordpress-3-9-2/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
