--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3,14 +3,14 @@ WordPress plugin wysija-newsletters:
     location: ['/wp-content/plugins/wysija-newsletters/readme.txt']
     secure_version: '2.6.7'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'CVE-2014-4725 http://osvdb.org/108614'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-4725 http://osvdb.org/108614'
     fingerprint: detect_general
 WordPress plugin w3-total-cache:
   1:
     location: ['/wp-content/plugins/w3-total-cache/readme.txt']
     secure_version: '0.9.3'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'CVE-2013-2010 http://osvdb.org/92652'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2013-2010 http://osvdb.org/92652'
     fingerprint: detect_general
 WordPress plugin wp-super-cache:
   1:
@@ -18,5 +18,5 @@ WordPress plugin wp-super-cache:
     secure_version: '1.3.2'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
     # incomplete fix in CVE-2013-2009
-    cve: 'CVE-2013-2011 http://osvdb.org/92743'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2013-2011 http://osvdb.org/92743'
     fingerprint: detect_general
