Created a bit more general detection functions.

--- a/yamls/collabtive.yml
+++ b/yamls/collabtive.yml
@@ -1,11 +1,13 @@
 # URL: http://www.collabtive.com/
 # CVE-2012-2670
 # CVE-2013-6872 1.2 http://osvdb.org/102123 http://secunia.com/advisories/56329/
+# CVE-2014-3246 2.0 http://osvdb.org/106764
+# CVE-2014-3247 2.0 http://osvdb.org/106765
 Collabtive:
   1:
     location: ['/changelog.txt']
     secure_version: '1.2'
-    regexp: '.*?Collabtive (?P<version>[0-9.]+)'
+    regexp: ['.*?Collabtive (?P<version>[0-9.]+)']
     cve: 'CVE-2013-6872 http://osvdb.org/102123'
-    fingerprint: detect_collabtive
+    fingerprint: detect_withoutnewlines
     post_processing: ['php5.fcgi']
