--- a/yamls/owncloud.yml
+++ b/yamls/owncloud.yml
@@ -53,4 +53,4 @@ ownCloud 5:
       secure_version: '5.0.17'
       regexp: ['.*?getVersionString.*?return.*?(?P<version>[0-9.]+)']
       cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-4929 https://owncloud.org/security/advisory/?id=oc-sa-2014-018'
-      fingerprint: detect_owncloud
+      fingerprint: detect_withoutnewlines
