--- a/yamls/tt-rss.yml
+++ b/yamls/tt-rss.yml
@@ -4,7 +4,7 @@ TinyTinyRSS:
   1:
     location: ['/include/version.php']
     secure_version: '1.5.2'
-    regexp: ['\s*?define.*?VERSION.*?(?P<version>[0-9.]+)']
+    regexp: ['\s*?define.*?VERSION_STATIC.*?(?P<version>[0-9.]+)']
     cve: 'http://osvdb.org/70934 http://secunia.com/advisories/43424/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
