--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -68,23 +68,23 @@
 MediaWiki 1.23:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.23.2'
+    secure_version: '1.23.4'
     regexp: ['\$wgVersion.*?(?P<version>1\.23\.[0-9.]{1,})']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-5241 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-5242 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-5243 http://lists.wikimedia.org/pipermail/mediawiki-announce/2014-July/000157.html'
+    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-September/000161.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.22:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.22.9'
+    secure_version: '1.22.11'
     regexp: ['\$wgVersion.*?(?P<version>1\.22\.[0-9.]{1,})']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-5241 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-5242 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-5243 http://lists.wikimedia.org/pipermail/mediawiki-announce/2014-July/000157.html'
+    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-September/000161.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.21:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.23.2'
+    secure_version: '1.23.4'
     regexp: ['\$wgVersion.*?(?P<version>1\.21\.[0-9.]{1,})']
     cve: 'MediaWiki 1.21 is end of life.'
     fingerprint: detect_general
@@ -92,7 +92,7 @@ MediaWiki 1.21:
 MediaWiki 1.20:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.23.2'
+    secure_version: '1.23.4'
     regexp: ['\$wgVersion.*?(?P<version>1\.20\.[0-9.]{1,})']
     cve: 'MediaWiki 1.20.x is end of life.'
     fingerprint: detect_general
@@ -100,15 +100,15 @@ MediaWiki 1.20:
 MediaWiki 1.19:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.19.18'
+    secure_version: '1.19.19'
     regexp: ['\$wgVersion.*?(?P<version>1\.19\.[0-9.]{1,})']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-5241 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-5242 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-5243 http://lists.wikimedia.org/pipermail/mediawiki-announce/2014-July/000157.html'
+    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-September/000161.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.18:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.23.2'
+    secure_version: '1.23.4'
     regexp: ['\$wgVersion.*?(?P<version>1\.1[0-8]\.[0-9.]{1,})']
     cve: 'MediaWiki 1.18.x is end of life.'
     fingerprint: detect_general
