--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -94,8 +94,8 @@
 # CVE-2012-2402 3.3.2   http://codex.wordpress.org/Version_3.3.2
 # CVE-2012-2403 3.3.2   http://codex.wordpress.org/Version_3.3.2
 # CVE-2012-2404 3.3.2   http://codex.wordpress.org/Version_3.3.2
-# CVE-2012-3383 3.4.1   http://codex.wordpress.org/Version_3.4.1
-# CVE-2012-3384 3.4.1   http://codex.wordpress.org/Version_3.4.1
+# CVE-2012-3383 3.4.1   http://codex.wordpress.org/Version_3.4.1 http://osvdb.org/84340
+# CVE-2012-3384 3.4.1   http://codex.wordpress.org/Version_3.4.1 http://osvdb.org/83357
 # CVE-2012-3385 3.4.1   http://codex.wordpress.org/Version_3.4.1
 # CVE-2012-4421 3.4.2   http://codex.wordpress.org/Version_3.4.2
 # CVE-2012-4448 3.5     http://osvdb.org/85731 SA50715 http://packetstormsecurity.org/files/116785/WordPress-3.4.2-Cross-Site-Request-Forgery.html
@@ -119,8 +119,8 @@
 # CVE-2013-4339 3.6.1   http://codex.wordpress.org/Version_3.6.1
 # CVE-2013-4340 3.6.1   http://codex.wordpress.org/Version_3.6.1
 # CVE-????-???? 3.1.4   http://osvdb.org/73721 http://osvdb.org/73722 http://osvdb.org/73723 http://wordpress.org/news/2011/06/wordpress-3-1-4/
-# CVE-2014-0165 3.8.2/3.7.2 http://codex.wordpress.org/Version_3.8.2 http://codex.wordpress.org/Version_3.7.2 http://osvdb.org/show/osvdb/105630
-# CVE-2014-0166 3.8.2/3.7.2 http://codex.wordpress.org/Version_3.8.2 http://codex.wordpress.org/Version_3.7.2 http://osvdb.org/show/osvdb/105620
+# CVE-2014-0165 3.8.2/3.7.2 http://codex.wordpress.org/Version_3.8.2 http://codex.wordpress.org/Version_3.7.2 http://osvdb.org/105630
+# CVE-2014-0166 3.8.2/3.7.2 http://codex.wordpress.org/Version_3.8.2 http://codex.wordpress.org/Version_3.7.2 http://osvdb.org/105620
 # CVE-2012-5868 4.0     http://whiteoaksecurity.com/blog/2012/12/17/cve-2012-5868-wordpress-342-sessions-not-terminated-upon-explicit-user-logout http://blog.spiderlabs.com/2014/09/leveraging-lfi-to-get-full-compromise-on-wordpress-sites.html
 WordPress:
   1:
