--- a/yamls/espocrm.yml
+++ b/yamls/espocrm.yml
@@ -1,4 +1,4 @@
-# URL: http://www.espocrm.com/
+# URL: http://www.espocrm.com/ http://sourceforge.net/projects/espocrm/
 # CVE-2014-8330 N/A http://osvdb.org/109977 https://www.htbridge.com/advisory/HTB23238
 EspoCRM:
   1:
