--- a/yamls/espocrm.yml
+++ b/yamls/espocrm.yml
@@ -1,10 +1,12 @@
 # URL: http://www.espocrm.com/ http://sourceforge.net/projects/espocrm/
-# CVE-2014-8330 N/A http://osvdb.org/109977 https://www.htbridge.com/advisory/HTB23238
+# CVE-2014-8330 2.4.0 http://osvdb.org/109977
+# CVE-2014-7985 2.6.0 https://www.htbridge.com/advisory/HTB23238
+# CVE-2014-7986 2.6.0 https://www.htbridge.com/advisory/HTB23238
 EspoCRM:
   1:
     location: ['/application/Espo/Core/defaults/config.php']
     secure_version: '2.6.0'
     regexp: ["\t'version.*?(?P<version>[0-9.]+)"]
-    cve: 'http://forum.espocrm.com/announcements/2506-espocrm-2-6-0-released?routestring=forum/announcements/2506-espocrm-2-6-0-released'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-7985 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-7986 https://www.htbridge.com/advisory/HTB23238'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
