--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -125,9 +125,16 @@
 # CVE-2014-XXXX 4.0.1   https://wordpress.org/news/2014/11/wordpress-4-0-1/
 WordPress:
   1:
-    location: ['/wp-includes/version.php']
+    location: ['/wp-includes/version.php', '/wp-includes/vars.php']
     secure_version: '4.0.1'
     regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
+    cve: 'https://wordpress.org/news/2014/11/wordpress-4-0-1/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+  2:
+    location: ['/b2-include/b2vars.php']
+    secure_version: '4.0.1'
+    regexp: ['\$b2_version.*?(?P<version>[0-9.]+)']
     cve: 'https://wordpress.org/news/2014/11/wordpress-4-0-1/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
