--- a/yamls/phpbb3.yml
+++ b/yamls/phpbb3.yml
@@ -11,6 +11,6 @@ phpBB3:
     location: ['/includes/constants.php']
     secure_version: '3.0.8'
     regexp: ['.*?PHPBB_VERSION.*?(?P<version>3[0-9.]{1,})']
-    cve: CVE-2011-0544, SA42343
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2011-0544'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
