--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -89,9 +89,9 @@ MediaWiki 1.23:
 MediaWiki 1.22:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.22.15'
+    secure_version: '1.24.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.22\.[0-9.]{1,})']
-    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-December/000173.html'
+    cve: 'MediaWiki 1.22 is end of life.'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.21:
@@ -110,7 +110,7 @@ MediaWiki 1.20:
     cve: 'MediaWiki 1.20.x is end of life.'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
-MediaWiki 1.19:
+MediaWiki 1.19:  # Will be supported until 2015 May
   1:
     location: ['/includes/DefaultSettings.php']
     secure_version: '1.19.23'
