Added fingerprint data.

--- a/yamls/phpmyadmin.yml
+++ b/yamls/phpmyadmin.yml
@@ -38,7 +38,7 @@
 # PMASA-2011-11
 # PMASA-2011-12
 # PMASA-2011-13
-# PMASA-2011-14
+# PMASA-2011-14 CVE-2011-3592
 # PMASA-2011-15
 # PMASA-2011-16
 # PMASA-2010-17
