Added fingerprint data.

--- a/yamls/opencart.yml
+++ b/yamls/opencart.yml
@@ -3,6 +3,7 @@
 # CVE-2010-1610 1.4.8 http://osvdb.org/62083 http://blog.visionsource.org/2010/01/28/opencart-csrf-vulnerability/
 # CVE-2013-1891 N/A http://osvdb.org/91500 http://www.waraxe.us/advisory-98.html
 # CVE-2012-XXXX N/A http://www.waraxe.us/advisory-84.html http://osvdb.org/81240 http://osvdb.org/81241 http://osvdb.org/81242 http://osvdb.org/81243 http://osvdb.org/81238 http://osvdb.org/81239
+# CVE-2014-XXXX TODO http://osvdb.org/100740
 # CVE-2014-3990 N/A http://karmainsecurity.com/KIS-2014-08 1.5.6.5 is not yet released yet
 OpenCart:
   1:
