Added fingerprint data.

--- a/yamls/owncloud.yml
+++ b/yamls/owncloud.yml
@@ -4,6 +4,7 @@
 # N/A               CVE-2012-5336   4.0.8
 # N/A               CVE-2012-5056   4.0.8
 # N/A               CVE-2012-5057   4.0.8
+# N/A               CVE-2013-6403   5.0.13
 # oC-SA-2013-005    CVE-2013-0302   4.0.12
 # oC-SA-2013-006    CVE-2013-0303/CVE-2013-7344 4.5.7
 # oC-SA-2013-007    CVE-2013-0304   4.5.7
