Added security reporting page URL.

--- a/yamls/concrete5.yml
+++ b/yamls/concrete5.yml
@@ -1,4 +1,5 @@
 # URL: http://www.concrete5.org/developers/downloads/
+# NOTE: http://www.concrete5.org/developers/security/
 # NFU: CVE-2012-5181 (japanese version)
 # CVE-2013-XXXX http://osvdb.org/94199
 # CVE-2013-XXXX http://osvdb.org/94200 latest version affected
