--- a/yamls/bugzilla.yml
+++ b/yamls/bugzilla.yml
@@ -38,6 +38,6 @@ Bugzilla:
     location: ['/docs/en/xml/bugzilla.ent', '/docs/en/xml/Bugzilla-Guide.xml']
     secure_version: '4.5.6'
     regexp: ['<!ENTITY bz-ver.*?(?P<version>[0-9.]+)']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-1546 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-1571 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-1572 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-1573'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-1571 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-1572 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-1573'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
