--- a/yamls/e107.yml
+++ b/yamls/e107.yml
@@ -55,11 +55,12 @@
 # CVE-2013-7305 TODO
 # CVE-2014-1846 TODO
 # CVE-2014-4734 TODO
+# CVE-2015-1041 TODO v.1.0.4 affected
 e107:
   1:
     location: ['/e107_admin/ver.php']
     secure_version: '1.0.3'
     regexp: ['.*?e107_version.*?(?P<version>[.0-9]{2,})']
-    cve: CVE-2012-6434 http://osvdb.org/88908
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2012-6434 http://osvdb.org/88908'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
