--- a/yamls/bugzilla.yml
+++ b/yamls/bugzilla.yml
@@ -1,3 +1,4 @@
+# NOTE 2014-01-31: Bugzilla 4.5.x is an unstable development release
 # CVE-2011-3657
 # CVE-2012-0440
 # CVE-2012-0440
@@ -5,7 +6,7 @@
 # CVE-2012-0448
 # CVE-2012-0453
 # CVE-2012-0453
-# CVE-2012-0465
+# CVE-2011-0465
 # CVE-2012-0465 4.2.1   http://osvdb.org/81262
 # CVE-2012-0466
 # CVE-2012-0466 4.2.1   http://osvdb.org/81263
@@ -33,11 +34,19 @@
 # CVE-2014-1572 4.5.6/4.4.6/4.2.11/4.0.15
 # CVE-2014-1573 4.5.6/4.4.6/4.2.11/4.0.15
 # N/A           4.5.6/4.4.6/4.2.11/4.0.15   https://bugzilla.mozilla.org/show_bug.cgi?id=1054702
-Bugzilla:
+Bugzilla 4.4:
   1:
-    location: ['/docs/en/xml/bugzilla.ent', '/docs/en/xml/Bugzilla-Guide.xml']
-    secure_version: '4.5.6'
-    regexp: ['<!ENTITY bz-ver.*?(?P<version>[0-9.]+)']
+    location: ['/docs/en/xml/bugzilla.ent']
+    secure_version: '4.4.6'
+    regexp: ['<!ENTITY bz-ver.*?(?P<version>4\.[3-4]\.[0-9])']
     cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-1571 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-1572 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-1573'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+Bugzilla 4.2:
+  1:
+    location: ['/docs/en/xml/Bugzilla-Guide.xml']
+    secure_version: '4.2.11'
+    regexp: ['<!ENTITY bz-ver.*?(?P<version>[0-9.]+)']
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-1571 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-1572 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-1573'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']    
