--- a/yamls/bugzilla.yml
+++ b/yamls/bugzilla.yml
@@ -38,7 +38,7 @@ Bugzilla 4.4:
   1:
     location: ['/docs/en/xml/bugzilla.ent']
     secure_version: '4.4.6'
-    regexp: ['<!ENTITY bz-ver.*?(?P<version>4\.[3-4]\.[0-9])']
+    regexp: ['<!ENTITY bz-ver.*?(?P<version>4\.[3-4]\.[0-9]+)']
     cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-1571 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-1572 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-1573'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
@@ -46,7 +46,15 @@ Bugzilla 4.2:
   1:
     location: ['/docs/en/xml/Bugzilla-Guide.xml']
     secure_version: '4.2.11'
-    regexp: ['<!ENTITY bz-ver.*?(?P<version>[0-9.]+)']
+    regexp: ['<!ENTITY bz-ver.*?(?P<version>4\.[1-2]\.[0-9]+)']
     cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-1571 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-1572 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-1573'
     fingerprint: detect_general
-    post_processing: ['php5.fcgi']    
+    post_processing: ['php5.fcgi']
+Bugzilla 4.0:
+  1:
+    location: ['/docs/en/xml/Bugzilla-Guide.xml']
+    secure_version: '4.0.15'
+    regexp: ['<!ENTITY bz-ver.*?(?P<version>4\.0\.[0-9]+)']
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-1571 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-1572 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-1573'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
