--- a/yamls/roundcube.yml
+++ b/yamls/roundcube.yml
@@ -16,7 +16,7 @@
 # CVE-2012-4668 0.8.1 http://osvdb.org/85142
 # CVE-2012-6121 0.8.5 http://osvdb.org/90175 http://osvdb.org/90177
 # CVE-2013-1904 0.8.6
-# CVE-2013-5646 0.9.3 http://osvdb.org/96722
+# CVE-2013-5646 0.9.3 http://osvdb.org/96722 http://roundcube.net/news/2013/08/21/update-0.9.3-released/
 # CVE-2013-6172 0.9.5/0.8.7 http://roundcube.net/news/2013/10/21/security-updates-095-and-087/ http://trac.roundcube.net/ticket/1489382 http://osvdb.org/98895
 # CVE-2014-N/A  N/A http://osvdb.org/105639 http://trac.roundcube.net/ticket/1489729 http://seclists.org/oss-sec/2014/q2/55
 # CVE-2014-N/A  1.0.0 http://osvdb.org/105486 http://roundcube.net/news/2014/04/07/roundcube-webmail-1.0.0-released/
