--- a/yamls/collabtive.yml
+++ b/yamls/collabtive.yml
@@ -1,4 +1,4 @@
-# URL: http://www.collabtive.com/
+# URL: http://collabtive.o-dyn.de/
 # CVE-2012-2670
 # CVE-2013-6872 1.2 http://osvdb.org/102123 http://secunia.com/advisories/56329/
 # CVE-2014-3246 2.0 http://osvdb.org/106764
