--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -4,6 +4,13 @@
 # https://drupal.org/SA-CORE-2012-001   CVE-2012-0825   7.11/6.23
 # https://drupal.org/SA-CORE-2012-001   CVE-2012-0826   7.11/6.23
 # https://drupal.org/SA-CORE-2012-001   CVE-2012-0827   7.11/6.23
+# https://drupal.org/SA-CORE-2012-002   CVE-2012-1588   7.13
+# https://drupal.org/SA-CORE-2012-002   CVE-2012-1589   7.13
+# https://drupal.org/SA-CORE-2012-002   CVE-2012-1590   7.13
+# https://drupal.org/SA-CORE-2012-002   CVE-2012-1591   7.13
+# https://drupal.org/SA-CORE-2012-002   CVE-2012-2153   7.13
+# https://drupal.org/SA-CORE-2012-003   CVE-2012-4553   7.16
+# https://drupal.org/SA-CORE-2012-003   CVE-2012-4554   7.16
 # https://drupal.org/SA-CORE-2012-004   CVE-2012-5651   7.18/6.27
 # https://drupal.org/SA-CORE-2012-004   CVE-2012-5652   7.18/6.27
 # https://drupal.org/SA-CORE-2012-004   CVE-2012-5653   7.18/6.27
